[metadata]
name = numverify
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = c91feb417e00c7f6b0e7077583f9d870
author = Boss
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = numverify
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    numverify=numverify:main
[build_ext]
inplace = 1




